--- a/Build and train model.ipynb
+++ b/Build and train model.ipynb
@@ -722,7 +722,7 @@
     "    # select all existing positive cases + negative cases (of size positive_inds)\n",
     "    train_df = train_df.loc[positive_inds + negative_sample] \n",
     "    \n",
-    "    ## Split validation set 10-90 (pos-neg)\n",
+    "    ## Split validation \n",
     "    positive_inds_valid = valid_df[valid_df.Pneumonia==1].index.tolist()\n",
     "    negative_inds_valid = valid_df[valid_df.Pneumonia==0].index.tolist()\n",
     "    \n",
