--- a/Build and train model.ipynb
+++ b/Build and train model.ipynb
@@ -1302,8 +1302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path1 = \"{}_my_model_vgg.best1.hdf5\".format('xray_class')\n",
-    "path2 = \"{}_my_model_vgg.best2.hdf5\".format('xray_class')"
+    "path1 = \"models/{}_my_model_vgg.best1.hdf5\".format('xray_class')\n",
+    "path2 = \"models/{}_my_model_vgg.best2.hdf5\".format('xray_class')"
    ]
   },
   {
@@ -2025,7 +2025,7 @@
     "## Just save model architecture to a .json:\n",
     "\n",
     "model_json = model_vgg.to_json()\n",
-    "with open(\"model_vgg.json\", \"w\") as json_file:\n",
+    "with open(\"models/model_vgg.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)"
    ]
   },
@@ -2038,7 +2038,7 @@
     "## Just save model architecture to a .json:\n",
     "\n",
     "model2_json = model2_vgg.to_json()\n",
-    "with open(\"model2_vgg.json\", \"w\") as json_file:\n",
+    "with open(\"models/model2_vgg.json\", \"w\") as json_file:\n",
     "    json_file.write(model2_json)"
    ]
   }
