--- a/Inference.ipynb
+++ b/Inference.ipynb
@@ -122,10 +122,11 @@
     }
    ],
    "source": [
-    "test_dicoms = ['test1.dcm','test2.dcm','test3.dcm','test4.dcm','test5.dcm','test6.dcm']\n",
+    "test_dicoms = ['images/test1.dcm','images/test2.dcm','images/test3.dcm',\n",
+    "               'images/test4.dcm','images/test5.dcm','images/test6.dcm']\n",
     "\n",
-    "model_path = 'model_vgg.json'\n",
-    "weight_path = 'xray_class_my_model_vgg.best1.hdf5'\n",
+    "model_path = 'models/model_vgg.json'\n",
+    "weight_path = 'models/xray_class_my_model_vgg.best1.hdf5'\n",
     "\n",
     "IMG_SIZE=(1,224,224,3) # This might be different if you did not use vgg16\n",
     "img_mean = -1 # loads the mean image value they used during training preprocessing\n",
@@ -167,7 +168,7 @@
     }
    ],
    "source": [
-    "plot_model(my_model, to_file='model_plot.png', show_shapes=True, show_layer_names=True)"
+    "plot_model(my_model, to_file='images/model_plot.png', show_shapes=True, show_layer_names=True)"
    ]
   },
   {
