--- a/Build and train model.ipynb
+++ b/Build and train model.ipynb
@@ -1820,6 +1820,7 @@
     "def calc_f1_scores(thresholds, precision, recall):\n",
     "    def find_threshold_and_calc(cur_th):\n",
     "        for i, th in enumerate(thresholds):\n",
+    "            # find the first threshold in thresholds that exceeds (> due to floating point arithmetic) the current threshold\n",
     "            if th > cur_th:\n",
     "                f1_score = f1(precision[i], recall[i])\n",
     "                if not math.isnan(f1_score):\n",
@@ -1827,6 +1828,7 @@
     "                else:\n",
     "                    return 0\n",
     "        return 0\n",
+    "    \n",
     "    return [find_threshold_and_calc(cur_th) for cur_th in thresholds]\n",
     "    \n",
     "\n",
