PDF and added reasoning for choosing threshold

--- a/Build and train model.ipynb
+++ b/Build and train model.ipynb
@@ -1970,6 +1970,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final threshold was 0.39. This struck a good balance between F1, precision, and recall as seen in the above graph. Any lower, and F1 and precision decrease but recall increases. In fact false positives increase substantially as the threshold is dropped. A general feature of the model is its ability to throw out negative cases due to its high negative predictive value, rather than correctly detect positive cases. At a threshold of 0.39, the negative predictive value is at its maximum."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
